--- a/src/routes/LandingPage/index.scss
+++ b/src/routes/LandingPage/index.scss
@@ -4,3 +4,9 @@ $ultrawide-width: 2000px;
 $desktop-width: 1200px;
 $tablet-width: 768px;
 $mobile-width: 480px;
+
+@media (min-width: $desktop-width) {
+  section {
+    max-height: 30%;
+  }
+}
